correct: categories in the about section wrapped inside an <ul> - <li> tag.

--- a/style.css
+++ b/style.css
@@ -307,6 +307,7 @@ body {
   justify-content: center;
   align-items: stretch;
   text-align: center;
+  list-style: none;
 }
 
 .skills-title {
